{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 13,
  "lineage": "b6204613-0f2b-f8a0-f50c-895107b6103d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:internet-gateway/igw-0ee90185b258d8e66",
            "id": "igw-0ee90185b258d8e66",
            "owner_id": "071329584645",
            "tags": {
              "Name": "project_igw"
            },
            "tags_all": {
              "Name": "project_igw"
            },
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:route-table/rtb-0c01ce6b4e527b329",
            "id": "rtb-0c01ce6b4e527b329",
            "owner_id": "071329584645",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:route-table/rtb-0d042b7bc02aa8f23",
            "id": "rtb-0d042b7bc02aa8f23",
            "owner_id": "071329584645",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee90185b258d8e66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06afae8c12ea9f6d2",
            "route_table_id": "rtb-0c01ce6b4e527b329",
            "subnet_id": "subnet-0c54e1772a16fb971"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2cc7c7ad4019004",
            "route_table_id": "rtb-0c01ce6b4e527b329",
            "subnet_id": "subnet-074c0bcee9a514db3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d18d3beeebccf789",
            "route_table_id": "rtb-0d042b7bc02aa8f23",
            "subnet_id": "subnet-011f98b458c24bba7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083045d7060087d2e",
            "route_table_id": "rtb-0d042b7bc02aa8f23",
            "subnet_id": "subnet-0eeb694c1fca9eb5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:subnet/subnet-0c54e1772a16fb971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c54e1772a16fb971",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071329584645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_project_subnet_1",
              "Tier": "Application Tier"
            },
            "tags_all": {
              "Name": "private_project_subnet_1",
              "Tier": "Application Tier"
            },
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:subnet/subnet-074c0bcee9a514db3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074c0bcee9a514db3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071329584645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_project_subnet_2",
              "Tier": "DB Tier"
            },
            "tags_all": {
              "Name": "private_project_subnet_2",
              "Tier": "DB Tier"
            },
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:subnet/subnet-011f98b458c24bba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011f98b458c24bba7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071329584645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_project_subnet_1",
              "Tier": "Web App Tier"
            },
            "tags_all": {
              "Name": "public_project_subnet_1",
              "Tier": "Web App Tier"
            },
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:subnet/subnet-0eeb694c1fca9eb5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb694c1fca9eb5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071329584645",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_project_subnet_2",
              "Tier": "Web App Tier"
            },
            "tags_all": {
              "Name": "public_project_subnet_2",
              "Tier": "Web App Tier"
            },
            "vpc_id": "vpc-0de0810fd795dce04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.project_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071329584645:vpc/vpc-0de0810fd795dce04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a203e700c2f50348",
            "default_route_table_id": "rtb-0239647434e0551dd",
            "default_security_group_id": "sg-042516c541dbd70ea",
            "dhcp_options_id": "dopt-0c1c4aac4c3242749",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de0810fd795dce04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0239647434e0551dd",
            "owner_id": "071329584645",
            "tags": {
              "Name": "Project_network"
            },
            "tags_all": {
              "Name": "Project_network"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}